objects/iPadApplication__c.object
<CustomObject>
    <fields>
        <fullName>AboutText__c</fullName>
        <label>About text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountIndustry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPersonBirthdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Person Birthdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPersonEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Person Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPersonName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Person Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountRating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationURL__c</fullName>
        <label>Application URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyBgImageURL__c</fullName>
        <label>Body Bg Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyBgImage__c</fullName>
        <label>Body Bg Image</label>
        <picklist>
            <picklistValues>
                <fullName>white</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>browse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BodyColor__c</fullName>
        <label>Body Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyIsUseImage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Body Is Use Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterId__c</fullName>
        <label>Chatter Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterPositionX__c</fullName>
        <defaultValue>130</defaultValue>
        <label>Chatter Position X (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChatterPositionY__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Chatter Position Y (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardId__c</fullName>
        <label>Dashboard Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DashboardPositionX__c</fullName>
        <label>Dashboard Position X (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardPositionY__c</fullName>
        <label>Dashboard Position Y (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FollowUpActivitiesLabel__c</fullName>
        <label>Follow Up Activities Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpButton1BgColor__c</fullName>
        <label>Follow Up Button 1 Bg Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpButton1FontColor__c</fullName>
        <label>Follow Up Button 1 Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpButton1Label__c</fullName>
        <label>Follow Up Button 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpButton2BgColor__c</fullName>
        <label>Follow Up Button 2 Bg Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpButton2FontColor__c</fullName>
        <label>Follow Up Button 2 Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpButton2Label__c</fullName>
        <label>Follow Up Button 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpContactImageURL__c</fullName>
        <label>Follow Up Contact Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpContactTwitterHandle__c</fullName>
        <label>Follow Up Contact Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpInterestLabel__c</fullName>
        <label>Follow Up Interest Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpMapCenter__c</fullName>
        <label>Follow Up Map Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpMapHeight__c</fullName>
        <label>Follow Up Map Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FollowUpMapSensor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Map Sensor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FollowUpMapWidth__c</fullName>
        <label>Follow Up Map Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FollowUpMapZoom__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Follow Up Map Zoom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FollowUpProfileLabel__c</fullName>
        <label>Follow Up Profile Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpShowEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FollowUpShowEvents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FollowUpShowTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FollowUpShowTasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FooterColor__c</fullName>
        <description>Input in Hex (#ffffff)</description>
        <label>Footer Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterFontColor__c</fullName>
        <label>Footer Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderColor__c</fullName>
        <description>Input in hex (#ffffff)</description>
        <label>Header Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderFontColor__c</fullName>
        <label>Header Font Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Page_Title__c</fullName>
        <label>Home Page Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTwoCol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Two Col</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoginBgImageURL__c</fullName>
        <label>LoginBgImageURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginBgImage__c</fullName>
        <label>LoginBgImage</label>
        <picklist>
            <picklistValues>
                <fullName>white</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>browse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LoginBodyColor__c</fullName>
        <label>Login Body Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginButtonColor__c</fullName>
        <label>Login Button Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginButtonLabelColor__c</fullName>
        <label>Login Button Label Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginIsUseImage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login Is Use Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoginLabelColor__c</fullName>
        <label>Login Label Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogoURL__c</fullName>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_1_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Page 1 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_1_Title__c</fullName>
        <label>Page 1 Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_2_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Page 2 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_2_Title__c</fullName>
        <label>Page 2 Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_3_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Page 3 Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_3_Title__c</fullName>
        <label>Page 3 Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualforcePageLocationX__c</fullName>
        <label>Visualforce Page Location X (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualforcePageLocationY__c</fullName>
        <label>Visualforce Page Location Y (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualforcePageName__c</fullName>
        <label>Visualforce Page Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>iPad Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>iPad Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iPadApplications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>